[package]
name = "http-load-tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goose = "0.17"
tokio = { version = "1", features = ["full"] }
cloud-storage = "0.11"
reqwest = { version = "0.11", features = ["brotli"] }
xflags = "0.3.0"
